# automated-sr

./: .gitignore  CLAUDE.md  GOAL.md  README.md  aih-hepatitis.yaml  aih-hepatitis_abstract_screening.csv  aih-hepatitis_extractions.csv  aih-hepatitis_fulltext_screening.csv  aih-hepatitis_review_details.md  pyproject.toml
.github/workflows/: ci.yml
src/automated_sr/: __init__.py  cli.py  config.py  database.py  models.py
src/automated_sr/analysis/: __init__.py  filters.py  forest_plot.py  statistics.py
src/automated_sr/citations/: __init__.py  ris_parser.py  zotero.py
src/automated_sr/extraction/: __init__.py  extractor.py
src/automated_sr/llm/: __init__.py  base.py
src/automated_sr/openalex/: __init__.py  client.py  pdf_retrieval.py
src/automated_sr/output/: __init__.py  exporter.py
src/automated_sr/pdf/: __init__.py  doi_extractor.py  processor.py
src/automated_sr/prompts/: __init__.py  templates.py
src/automated_sr/screening/: __init__.py  abstract.py  fulltext.py  multi_reviewer.py
src/automated_sr/search/: __init__.py  strategy.py
tests/: __init__.py  conftest.py  test_doi_extractor.py  test_models.py  test_prompts.py  test_statistics.py  test_zotero.py
