[project]
name = "automated-sr"
version = "0.1.0"
description = "Automated systematic review tool using Claude AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyzotero>=1.7.0",
    "rispy>=0.9.0",
    "pymupdf>=1.25.0",
    "pydantic>=2.10.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pyyaml>=6.0.0",
    # Multi-API support via LiteLLM
    "litellm>=1.50.0",
    "httpx>=0.25.0",
    # OpenAlex integration
    "pyalex>=0.14.0",
    # Meta-analysis
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
sr = "automated_sr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automated_sr"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
